# encoding

./: CMakeLists.txt  README.md  coreset.py  create-env.sh  download_data.py  fhash.py  load-env.sh  test.py  train.py  utility.py
direct_faiss/: README.md  vector_db.py
mfa_faiss/: CMakeLists.txt  README.md  block.hpp  example-setup.hpp  gridded_3d.cpp  patch_similarity.py  read_inspect_mfa.py  vector_db.py
simple/: model.py  test.py  train.py
simple_embedding_faiss/: model.py  patch_similarity.py  prepare_data.py  train.py  utility.py  vector_db.py
simple_embedding_only/: prepare_data.py  train.py
simple_faiss/: README.md  train.py  vector_db.py
